Misc CSS Fixes (#47)
* clean up profile

* fix overflows

* remove step number

--- a/styles/CodeEditor.module.scss
+++ b/styles/CodeEditor.module.scss
@@ -1,3 +1,27 @@
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .CodeEditor {
+    min-width: 664px;
+    max-width: 640px;
+  }
+}
+
 .line-modal {
   position: absolute;
   right: 50%;
@@ -12,4 +36,17 @@
     padding: 16px;
     right: -50%;
   }
+}
+
+.CodeEditor {
+  box-shadow: 0px 4px 16px #edece9;
+  border-radius: 8px;
+  width: 100%;
+  height: 96vh;
+  position: sticky;
+  top: 2vh;
+
+  display: flex;
+  flex-direction: column;
+  margin-top: 2vh;
 }
