--- a/styles/Landing.module.scss
+++ b/styles/Landing.module.scss
@@ -160,6 +160,7 @@
   display: flex;
   align-items: center;
   transition: all ease-in-out 0.2s;
+  word-break: break-word;
 }
 
 .Edit {
