--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -1,6 +1,6 @@
 .Post {
   height: 270px;
-
+  margin-bottom: 24px;
   background: #1f1c21;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
