--- a/styles/Scrolling.module.scss
+++ b/styles/Scrolling.module.scss
@@ -12,6 +12,10 @@
   padding: 16px;
 }
 
+.post-title {
+  overflow-wrap: break-word;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .scrolling {
